--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,20 @@
 name: onepref
 description: A package you can use to implement in app purchases easily and work with sharePrefences, other useful widgets to make your development easily.
-version: 0.0.8
+version: 0.0.12
 homepage: https://github.com/wdtheprovider/onepref
 
 environment:
-  sdk: '>=2.18.2 <3.0.0'
+  sdk: '>=3.0.3 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  shared_preferences: ^2.1.1
-  in_app_purchase_android: ^0.2.5+4
-  in_app_purchase: ^3.1.5
+  shared_preferences: ^2.1.2
+  in_app_purchase_android: ^0.3.0+6
+  in_app_purchase_platform_interface: ^1.3.4
+  in_app_purchase_storekit: ^0.3.6+4
+  in_app_purchase: ^3.1.7
 
 dev_dependencies:
   flutter_test:
