--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: onepref
 description: A package you can use to implement in app purchases easily and work with sharePrefences, other useful widgets to make your development easily.
-version: 0.0.12
+version: 0.0.14
 homepage: https://github.com/wdtheprovider/onepref
 
 environment:
@@ -10,11 +10,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  shared_preferences: ^2.1.2
-  in_app_purchase_android: ^0.3.0+6
-  in_app_purchase_platform_interface: ^1.3.4
-  in_app_purchase_storekit: ^0.3.6+4
-  in_app_purchase: ^3.1.7
+  shared_preferences: ^2.2.1
+  in_app_purchase_android: ^0.3.0+13
+  in_app_purchase_platform_interface: ^1.3.5
+  in_app_purchase_storekit: ^0.3.6+7
+  in_app_purchase: ^3.1.10
 
 dev_dependencies:
   flutter_test:
@@ -23,3 +23,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+
+platforms:
+  android:
+  ios:
+  macos:
