--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: onepref
-description: A package you can use to implement in app purchases easily and work with sharePrefences, other useful widgets to make your development easily.
-version: 0.0.20
+description: A package you can use to implement in app purchases easily and work with sharePreferences, other useful widgets to make your development easily.
+version: 0.0.21
 homepage: https://github.com/wdtheprovider/onepref
 
 environment:
@@ -11,15 +11,15 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.5.3
-  in_app_purchase_android: ^0.4.0+2
+  in_app_purchase_android: ^0.4.0+4
   in_app_purchase_platform_interface: ^1.4.0
-  in_app_purchase_storekit: ^0.4.2
+  in_app_purchase_storekit: ^0.4.4
   in_app_purchase: ^3.2.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # The following section is specific to Flutter packages.
 flutter:
